--- a/landingPage/landingPage.scss
+++ b/landingPage/landingPage.scss
@@ -15,9 +15,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-family: 'Diplomata SC', cursive;
+    font-family: 'Ultra', serif;
     color: #BA3737;
-    font-size: 17px;
+    font-size: 1.7rem;
   }
   &>div:nth-child(2){
     width: 50vw;
