--- a/landingPage/landingPage.css
+++ b/landingPage/landingPage.css
@@ -19,9 +19,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  font-family: "Diplomata SC", cursive;
+  font-family: "Ultra", serif;
   color: #BA3737;
-  font-size: 17px;
+  font-size: 1.7rem;
 }
 #root > div:nth-child(2) {
   width: 50vw;
