--- a/1. landingPage/landingPage.css
+++ b/1. landingPage/landingPage.css
@@ -24,6 +24,14 @@
   font-size: 1.7rem;
 }
 #root > div:nth-child(2) {
+  width: 80vw;
+  height: 30vh;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: column;
+}
+#root > div:nth-child(2) > div:nth-child(1) {
   width: 50vw;
   height: 10vh;
   color: #fff;
@@ -33,7 +41,7 @@
   justify-content: center;
   align-items: center;
 }
-#root > div:nth-child(3) {
+#root > div:nth-child(2) > div:nth-child(2) {
   width: 50vw;
   height: 5vh;
   color: #fff;
