--- a/1. landingPage/landingPage.scss
+++ b/1. landingPage/landingPage.scss
@@ -20,25 +20,34 @@
     font-size: 1.7rem;
   }
   &>div:nth-child(2){
-    width: 50vw;
-    height: 10vh;
-    color: #fff;
-
-    font-size: 1.5rem;
-    font-family: 'Special Elite', cursive;
+    width: 80vw;
+    height: 30vh;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
+    flex-direction: column;
+    // border: 1px solid red;
+    &>div:nth-child(1){
+      width: 50vw;
+      height: 10vh;
+      color: #fff;
+  
+      font-size: 1.5rem;
+      font-family: 'Special Elite', cursive;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    &>div:nth-child(2){
+      width: 50vw;
+      height: 5vh;
+      color: #fff;
+  
+      font-size: 1.5rem;
+      font-family: 'Special Elite', cursive;
+      display: flex;
+      justify-content: center;
+      align-items: center;
   }
-  &>div:nth-child(3){
-    width: 50vw;
-    height: 5vh;
-    color: #fff;
-
-    font-size: 1.5rem;
-    font-family: 'Special Elite', cursive;
-    display: flex;
-    justify-content: center;
-    align-items: center;
   }
 }
