--- a/6. actorPage/actorpage.scss
+++ b/6. actorPage/actorpage.scss
@@ -26,7 +26,8 @@
   &>div:nth-child(2){
     width: 100vw;
     height: 70vh;
-    background-color: #c4c4c4;
+    background-image: url(./actor.svg);
+    background-size: cover;
 
     &>div:nth-child(1){
       color: #fff;
@@ -53,6 +54,18 @@
       width: 25vw;
       height: 17vh;
       background-color: #c4c4c4;
+    }
+    &>div:nth-child(1){
+      background-image: url(./여배우는\ 오늘도\ 1.svg);
+      background-size: cover;
+    }
+    &>div:nth-child(2){
+      background-image: url(./여자들.svg);
+      background-size: cover;
+    }
+    &>div:nth-child(3){
+      background-image: url(./죄많은소녀.svg);
+      background-size: cover;
     }
   }
 
