--- a/7. filmPage/filmPage.scss
+++ b/7. filmPage/filmPage.scss
@@ -1,16 +1,21 @@
-*{margin: 0; padding: 0; box-sizing: border-box;}
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
-#root{
+#root {
   width: 100vw;
   height: 100vh;
   background-color: #2D2D2D;
-  
-  &>div:nth-child(1){
+
+  &>div:nth-child(1) {
     width: 100vw;
     height: 10vh;
     display: flex;
     justify-content: flex-end;
-    &>nav{
+
+    &>nav {
       width: 20vw;
       height: 10vh;
       display: flex;
@@ -23,7 +28,7 @@
     }
   }
 
-  &>div:nth-child(2){
+  &>div:nth-child(2) {
     width: 100vw;
     height: 70vh;
     background-color: #ccc;
@@ -31,25 +36,28 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    &>div:nth-child(1){
+
+    &>div:nth-child(1) {
       width: 5vw;
       height: 5vw;
       background-color: black;
     }
   }
 
-  &>div:nth-child(3){
+  &>div:nth-child(3) {
     width: 100vw;
     height: 20vh;
     border: 1px solid red;
-    &>div:nth-child(1){
+
+    &>div:nth-child(1) {
       width: 100vw;
       height: 5vh;
-      
+
       display: flex;
       justify-content: space-between;
       align-items: center;
-      &>div:nth-child(1){
+
+      &>div:nth-child(1) {
         color: #fff;
 
         width: 15vw;
@@ -58,13 +66,15 @@
         justify-content: center;
         align-items: center;
       }
-      &>div:nth-child(2){
+
+      &>div:nth-child(2) {
         width: 25vw;
         height: 5vh;
         display: flex;
         justify-content: space-around;
         align-items: center;
-        &>div{
+
+        &>div {
           width: 5vw;
           height: 5vw;
           background-color: black;
@@ -72,55 +82,53 @@
       }
     }
 
-    &>div:nth-child(2){
+    &>div:nth-child(2) {
       width: 100vw;
       height: 7vh;
       color: #fff;
-      &>p{
+
+      &>p {
         margin-left: 3vw;
       }
     }
 
-    &>div:nth-child(3){
+    &>div:nth-child(3) {
       width: 100vw;
       height: 2vh;
       display: flex;
       align-items: center;
-      
-      &>div:nth-child(1){
+
+      &>div:nth-child(1) {
         width: 3vw;
         height: 3vw;
         margin-left: 2vw;
         background-color: rgb(255, 238, 0);
       }
-      &>p{
+
+      &>p {
         color: #fff;
         margin-left: 2vw;
       }
     }
 
-    &>div:nth-child(4){
+    &>div:nth-child(4) {
       width: 100vw;
       height: 4vh;
-      
-      &>div:nth-child(1){
+
+      &>div:nth-child(1) {
         width: 25vw;
         height: 4vh;
-        
+
         display: flex;
         justify-content: space-around;
         align-items: center;
-        &>div{
+
+        &>div {
           width: 4vw;
           height: 4vw;
           background-color: #000;
         }
       }
     }
-
-
   }
-
-
-
 }
