--- a/7. filmPage/filmPage.css
+++ b/7. filmPage/filmPage.css
@@ -27,8 +27,8 @@
 }
 #root > div:nth-child(2) {
   width: 100vw;
-  height: 70vh;
-  background-color: #ccc;
+  height: 60vh;
+  background-color: #000;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -41,7 +41,6 @@
 #root > div:nth-child(3) {
   width: 100vw;
   height: 20vh;
-  border: 1px solid red;
 }
 #root > div:nth-child(3) > div:nth-child(1) {
   width: 100vw;
@@ -71,12 +70,24 @@
   background-color: black;
 }
 #root > div:nth-child(3) > div:nth-child(2) {
-  width: 100vw;
-  height: 7vh;
+  width: 95vw;
+  height: 18vh;
   color: #fff;
+  text-align: justify;
+  line-height: 25px;
 }
 #root > div:nth-child(3) > div:nth-child(2) > p {
   margin-left: 3vw;
+  font-size: 0.6rem;
+}
+#root > div:nth-child(3) > div:nth-child(2) > p:nth-child(1) {
+  height: 3vh;
+}
+#root > div:nth-child(3) > div:nth-child(2) > p:nth-child(2) {
+  height: 11vh;
+}
+#root > div:nth-child(3) > div:nth-child(2) > p:nth-child(3) {
+  height: 2vh;
 }
 #root > div:nth-child(3) > div:nth-child(3) {
   width: 100vw;
